# cmake-sample

./: README.md  azure-pipelines.yml
HelloWorld/: CMakeLists.txt
HelloWorld-CSharp/: CMakeLists.txt  HelloWorld.cs
HelloWorldRC/: CMakeLists.txt
LibrarySample/: CMakeLists.txt
LibrarySample/Program/: CMakeLists.txt  Program.c
